<resources>
    <string name="app_name">Linked</string>
    <string name="logout">Log Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="enter_repeat_password">Repeat password</string>
    <string name="enter_password">Enter pasword</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_name">Enter name</string>
    <string name="register_error">Register error</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="name_is_blank">Name is blank</string>
    <string name="login_is_blank">Login is blank</string>
    <string name="password_is_blank">Password is blank</string>
    <string name="api_error">API error</string>
    <string name="label_sign_in">Sign In</string>
    <string name="login_error">Login error</string>
    <string name="description_post_author_avatar">Author avatar</string>
    <string name="description_menu">Menu</string>
    <string name="there_are_posts">There are posts</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="save">Save</string>
    <string name="option_menu_remove">Remove</string>
    <string name="option_menu_edit">Edit</string>
    <string name="description_post_like">Like</string>
    <string name="description_select_home">Home</string>
    <string name="description_contacts">Contacts</string>
    <string name="description_events">Events</string>
    <string name="description_add_post">Add post</string>
    <string name="event_label">Event:</string>
    <string name="media_image">Media image</string>
    <string name="Offline">Offline</string>
    <string name="Online">Online</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="login">login:</string>
</resources>