<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_sign_in"
            android:layout_marginStart="@dimen/margin_sign_in"
            android:hint="@string/enter_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/field_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_sign_in"
            android:layout_marginStart="@dimen/margin_sign_in"
            android:hint="@string/enter_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_sign_in"
            android:layout_marginStart="@dimen/margin_sign_in"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/field_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_sign_in"
            android:layout_marginStart="@dimen/margin_sign_in"
            android:hint="@string/enter_repeat_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="@dimen/standard_field_width"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_button_sign_in"
            android:text="@string/label_sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>