<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_activity"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:defaultNavHost="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:navGraph="@navigation/navigation_main"
        tools:context=".presentation.activity.AppActivity" />

    <LinearLayout
        android:id="@+id/panel_menu_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_button_height"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/common_spacing"
            android:background="@color/divider_color"
            />

        <LinearLayout
            android:id="@+id/panel_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/home_button"
                style="@style/Widget.AppTheme.IconCheckableButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_select_home"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_baseline_home_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/users_button"
                style="@style/Widget.AppTheme.IconCheckableButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_contacts"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_baseline_users_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/events_button"
                style="@style/Widget.AppTheme.IconCheckableButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_events"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_baseline_event_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_post_button"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_add_post"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_baseline_post_add_24" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>